--- a/about.html
+++ b/about.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>remed</title>
+	<title>remed!</title>
 </head>
 <body>
-<img src="hkl.jpeg">
+mantaplah pokoknya
 </body>
 </html>
